added actor class

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<canvas id="game" width="500" height="500"></canvas>
+		<script style="text/javascript" src="classes/Actor.js"></script>
 		<script style="text/javascript" src="classes/Skater.js"></script>
 		<script style="text/javascript" src="classes/Game.js"></script>
 		<script style="text/javascript" src="game.js"></script>
